[package]
name = "android_sensor-sys"
version = "0.1.3"
authors = [
    "The android_sensor_sys Developers",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nercury/android_sensor-sys-rs"
description = """
Bindings to Android Sensor Library.
"""

[dependencies.android_looper-sys]
version = "0.1"

[dependencies.libc]
version = "0.2"
